<resources>
    <string name="app_name">BaluAirlines</string>

    <string name="incorrect_request">Неправильно сформирован запрос</string>
    <string name="incorrect_authorization">Неверная авторизация</string>
    <string name="element_not_found">Такой элемент не найден на сервере</string>
    <string name="server_error">Неопознанная ошибка сервера</string>
    <string name="no_internet_connection">Нет интернет соединения</string>
    <string name="error">Ошибка: </string>
    <string name="costs_not_found">Не найдено</string>

    <string name="departure_arrival_airports">%1$s - %2$s</string>
    <string name="flight_cost">от %1$d ₽</string>
    <string name="dep_arr_date_and_passengers">%1$s | пассажиров: %2$d</string>
    <string name="destination_flight_date">%1$s %2$ </string>
    <string name="passengers_cost">за пассажиров: %1$s </string>

    <string name="main">Главная</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="services">Сервисы</string>
    <string name="booking">Бронирование</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="flight_table">Табло рейсов</string>
    <string name="registration">Регистрация на рейс</string>
    <string name="search_booking">Поиск брони</string>
    <string name="flight_status">Статус рейса</string>
    <string name="departure">Отправление</string>
    <string name="arrival">Прибытие</string>
    <string name="passenger_quantity">Количество пассажиров</string>
    <string name="passenger_quantity_number">Количество пассажиров: %1$d</string>
    <string name="booking_owner_name">забранировано на: %1$s</string>
    <string name="successful_save">Маршрут успешно сохранен в избранное</string>

    <!--    hints       -->
    <string name="departure_hint">Откуда (обязательно)</string>
    <string name="arrival_hint">Куда (обязательно)</string>
    <string name="flight_number_hint">Номер рейса (обязательно)</string>
    <string name="departure_date_hint">Дата вылета</string>
    <string name="surname_hint">Введите фамилию пассажира</string>
    <string name="name_hint">Введите имя пассажира</string>
    <string name="passport_hint">Введите серию и номер паспорта</string>
    <string name="phone_hint">Введите номер телефона</string>
    <string name="email_hint">Введите e-mail</string>
    <string name="booking_number_hint">Введите номер брони/билета</string>
    <string name="back_hint">Обратно</string>


    <!--    buttons     -->
    <string name="search_button">Найти</string>
    <string name="search_booking_button">Найти бронирование</string>
    <string name="flight_number_button">Номер рейса</string>
    <string name="route">Маршрут</string>
    <string name="economy">Эконом</string>
    <string name="business">Бизнес</string>
    <string name="adult">Взрослые</string>
    <string name="adult_age">от 12 лет</string>
    <string name="children">Дети</string>
    <string name="children_descriptoin">от 0 до 12 лет</string>
    <string name="baby_passenger">Младенцы</string>
    <string name="baby_passenger_description">до 2 лет, без места \n на руках у взрослого</string>
    <string name="save">Сохранить</string>
    <string name="buy">Купить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>