<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary_dark"
    tools:context="com.company.baluairlines.services_feature.presentation.fragmetns.FlightTableFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:src="@drawable/flight_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_icon"
        app:theme="@style/ThemeOverlay.AppCompat" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/flight_table"
        android:textColor="@color/bold_text_color_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/rounded_full_card"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/departure_edit_text"
            style="@style/TextAppearance.LargeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/divider_color_dark"
            android:hint="@string/departure_hint"
            android:inputType="textCapCharacters"
            android:textColor="@color/bold_text_color_dark"
            android:textColorHint="@color/text_color_dark" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/date_edit_text"
            style="@style/TextAppearance.LargeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/divider_color_dark"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/departure_date_hint"
            android:textColor="@color/bold_text_color_dark"
            android:textColorHint="@color/text_color_dark" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/find_button"
            style="@style/TextAppearance.LargeBody"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/search_button"
            android:textAllCaps="false"
            android:textColor="@color/background_secondary_dark" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>